--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,27 @@
+<div class="group">
+  <div class="list-1">
+    <h1>Todo</h1>
+    <div listDraggable class="list" #listOne="listDraggable" [connectedTo]="listTwo">
+      <div listDrag>Buy groceries</div>
+      <div listDrag>Pay bills</div>
+      <div listDrag>Schedule doctor's appointment</div>
+      <div listDrag>Clean the house</div>
+      <div listDrag>Research vacation destinations</div>
+      <div listDrag>Call a friend</div>
+    </div>
+  </div>
+  <div class="list-2">
+    <h1>Done</h1>
+    <div listDraggable class="list" #listTwo="listDraggable" [connectedTo]="listOne">
+      <div listDrag> Plan a birthday party</div>
+      <div listDrag>Update resume</div>
+      <div listDrag>Organize files on computer</div>
+      <div listDrag>Attend a yoga class</div>
+    </div>
+  </div>
+
+</div>
+
 <div listDraggable class="list">
   <div listDrag>item 1</div>
   <div listDrag>item 2</div>
@@ -6,27 +30,5 @@
   <div listDrag>item 5</div>
   <div listDrag>item 6</div>
   <div listDrag>item 7</div>
-</div>
-
-
-<div class="group">
-  <div listDraggable class="list" #listOne="listDraggable" [connectedTo]="listTwo">
-    <div listDrag>item 1</div>
-    <div listDrag>item 2</div>
-    <div listDrag>item 3</div>
-    <div listDrag>item 4</div>
-    <div listDrag>item 5</div>
-    <div listDrag>item 6</div>
-    <div listDrag>item 7</div>
-  </div>
-
-  <div listDraggable class="list" #listTwo="listDraggable" [connectedTo]="listOne">
-    <div listDrag>item 1</div>
-    <div listDrag>item 2</div>
-    <div listDrag>item 3</div>
-    <div listDrag>item 4</div>
-    <div listDrag>item 5</div>
-    <div listDrag>item 6</div>
-    <div listDrag>item 7</div>
-  </div>
+  <div listDrag>item 8</div>
 </div>
