--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,19 +20,18 @@
   font-size: 14px;
 }
 
-div.list {
-  position: relative;
+div[listDraggable] {
   width: 500px;
   border: solid 1px #ccc;
   min-height: 60px;
   background: white;
-  /* border-radius: 4px; */
+  border-radius: 4px;
   overflow: hidden;
   font-family: sans-serif;
   display: block;
 }
 
-div.list > *:not(.selection) {
+div[listDraggable] > * {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
