--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<table selectable (selectionChange)="onTableSelectionChange($event)">
+<table selectable>
   <tr>
     <td>Company</td>
     <td>Contact</td>
@@ -42,48 +42,3 @@
     <td>831 Carter Freeway</td>
   </tr>
 </table>
-
-
-<div selectable (selectionChange)="onListSelectionChange($event)" class="list">
-  <div selectableItem> Plan a birthday party</div>
-  <div selectableItem>Update resume</div>
-  <div selectableItem>Organize files on computer</div>
-  <div selectableItem>Attend a yoga class</div>
-</div>
-
-
-
-<!-- <div class="group">
-  <div class="list-1">
-    <h1>Todo</h1>
-    <div listDraggable class="list" #listOne="listDraggable" [connectedTo]="listTwo">
-      <div listDrag>Buy groceries</div>
-      <div listDrag>Pay bills</div>
-      <div listDrag>Schedule doctor's appointment</div>
-      <div listDrag>Clean the house</div>
-      <div listDrag>Research vacation destinations</div>
-      <div listDrag>Call a friend</div>
-    </div>
-  </div>
-  <div class="list-2">
-    <h1>Done</h1>
-    <div listDraggable class="list" #listTwo="listDraggable" [connectedTo]="listOne">
-      <div listDrag> Plan a birthday party</div>
-      <div listDrag>Update resume</div>
-      <div listDrag>Organize files on computer</div>
-      <div listDrag>Attend a yoga class</div>
-    </div>
-  </div>
-
-</div>
-
-<div listDraggable class="list">
-  <div listDrag>item 1</div>
-  <div listDrag>item 2</div>
-  <div listDrag>item 3</div>
-  <div listDrag>item 4</div>
-  <div listDrag>item 5</div>
-  <div listDrag>item 6</div>
-  <div listDrag>item 7</div>
-  <div listDrag>item 8</div>
-</div> -->
